generar firma desde linea de comandos