@@ -1,29 +1,34 @@
 import java.io.*;
-import java.util.Base64;
+import java.nio.file.Files;
+import java.nio.file.Paths;
 
 public class ArchivoUtil {
 
     public static byte[] readFile(String rutaArchivo) throws IOException {
-        File archivo = new File(rutaArchivo);
-        try (FileInputStream entrada = new FileInputStream(archivo)) {
-            return entrada.readAllBytes();
+        return Files.readAllBytes(Paths.get(rutaArchivo));
+    }
+
+    public static void guardarClave(String ruta, byte[] clave) throws IOException {
+        try (FileOutputStream fos = new FileOutputStream(ruta)) {
+            fos.write(clave);
         }
     }
 
-    public static void embedSignature(String rutaArchivoOriginal, String rutaArchivoFirmado, String firmaCodificada)
-            throws IOException {
-        try (BufferedReader lector = new BufferedReader(new FileReader(rutaArchivoOriginal));
-             BufferedWriter escritor = new BufferedWriter(new FileWriter(rutaArchivoFirmado))) {
+    public static void embedSignature(String rutaEntrada, String rutaSalida, String firma) throws IOException {
+        try (BufferedReader reader = new BufferedReader(new FileReader(rutaEntrada));
+             BufferedWriter writer = new BufferedWriter(new FileWriter(rutaSalida))) {
+
             String linea;
-            while ((linea = lector.readLine()) != null) {
-                escritor.write(linea);
-                escritor.newLine();
+            while ((linea = reader.readLine()) != null) {
+                writer.write(linea);
+                writer.newLine();
             }
-            escritor.write("-----BEGIN DIGITAL SIGNATURE-----");
-            escritor.newLine();
-            escritor.write(firmaCodificada);
-            escritor.newLine();
-            escritor.write("-----END DIGITAL SIGNATURE-----");
+
+            writer.write("-----BEGIN DIGITAL SIGNATURE-----");
+            writer.newLine();
+            writer.write(firma);
+            writer.newLine();
+            writer.write("-----END DIGITAL SIGNATURE-----");
         }
     }
 }
